--- a/Admin/index.html
+++ b/Admin/index.html
@@ -24,11 +24,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">NSAM FIrst Degree College</a>
+          <a class="navbar-brand" href="#">NSAM FIrst Degree College</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Dashboard</a></li>
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="#courseAndSemester">Course &amp; Semester</a></li>
+            <li><a href="#section">Section</a></li>
+            <li><a href="#subject">Subject</a></li>            
             <li><a href="#staff">Staff</a></li>
             <li><a href="#student">Student</a></li>
             <li><a href="#sms">SMS</a></li>
@@ -70,8 +73,17 @@
               <a href="#" class="list-group-item active main-color-bg">
                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Dashboard
               </a>
+              <a href="#courseAndSemester" class="list-group-item">
+                <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Course and Semester 
+              </a>
+              <a href="#section" class="list-group-item">
+                <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Section 
+              </a>
+              <a href="#subject" class="list-group-item">
+                <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Subject 
+              </a>
               <a href="#staff" class="list-group-item">
-                <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Staff 
+                <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span> Staff 
               </a>
               <a href="#student" class="list-group-item">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Student 
@@ -149,11 +161,40 @@
     <script src="js/route.js"></script>
     <script src="js/controller/addStaffController.js"></script>
     <script src="js/controller/addStudentController.js"></script>
+    <script src="js/controller/courseAndSemesterController.js"></script>
     <script src="js/controller/editStaffController.js"></script>
     <script src="js/controller/editStudentController.js"></script>
     <script src="js/controller/homeController.js"></script>
+    <script src="js/controller/sectionController.js"></script>
     <script src="js/controller/smsController.js"></script>
     <script src="js/controller/staffController.js"></script>
     <script src="js/controller/studentController.js"></script>
+    <script src="js/controller/subjectController.js"></script>
+
+
+    <!-- Chartjs -->
+    <!-- <script src="js/chart.min.js"></script>
+    <script>
+      var myChart = document.getElementById('myChart').getContex('2d');
+
+      var massPopChart = new Chart(mychart, {
+        type: 'doughnut',
+        data: {
+          labels:['Boston', 'Worcester', 'Springdield', 'Lowell', 'Cambridge', 'New Bedford'],
+          datasets:[{
+            label:'Population',
+            data:[
+              617594,
+              181045,
+              153060,
+              106519,
+              105162,
+              95072
+            ]
+          }]
+        },
+        options: {} 
+      }); 
+    </script> -->
   </body>
 </html>
