added courseAndSemester, Section, Subject Controller

--- a/Admin/index.html
+++ b/Admin/index.html
@@ -159,11 +159,17 @@
 
     <!-- Basic Router Setup and Controllers -->
     <script src="js/route.js"></script>
+    <script src="js/controller/addCourseAndSemesterController.js"></script>
+    <script src="js/controller/addSectionController.js"></script>
     <script src="js/controller/addStaffController.js"></script>
     <script src="js/controller/addStudentController.js"></script>
+    <script src="js/controller/addSubjectController.js"></script>
     <script src="js/controller/courseAndSemesterController.js"></script>
+    <script src="js/controller/editCourseAndSemesterController.js"></script>
+    <script src="js/controller/editSectionController.js"></script>
     <script src="js/controller/editStaffController.js"></script>
     <script src="js/controller/editStudentController.js"></script>
+    <script src="js/controller/editSubjectController.js"></script>
     <script src="js/controller/homeController.js"></script>
     <script src="js/controller/sectionController.js"></script>
     <script src="js/controller/smsController.js"></script>
