--- a/staff/pages/home.html
+++ b/staff/pages/home.html
@@ -5,7 +5,7 @@
 </div>-->
 
 <div class="row">
-	<p class="lead">test staffid {{ message }} </p>
+	<!-- <p class="lead">test staffid {{ message }} </p> -->
 	<!--<span>{{ init() }}</span>-->
 	
 	<div ng-repeat="x in staffDetails">
